--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,9 @@ on:
   push:
     branches:
     - main
-    paths:
-    - '!*.md'
+    paths-ignore: 
+    - '**.md'
+    - '**/**.md'
 
 jobs:
   test:
