--- a/.github/workflows/ci2.yml
+++ b/.github/workflows/ci2.yml
@@ -29,7 +29,7 @@ jobs:
     # Add your solution below this line
     needs: sync
     runs-on: ubuntu-latest
-    if: ${{ needs.sync.outputs == 'run'}}
+    if: ${{ needs.sync.outputs.state == 'run'}}
     steps:
       - name: Run test suite
         run: |
