Disable push trigger in CI workflow
Commented out the push trigger configuration for CI.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,12 @@ name: Continuous Integration
 
 #workflow run trigger events
 on: 
-  push:
-    branches:
-    - main
-    paths-ignore: 
-    - '**.md'
-    - '**/**.md'
+  #push:
+  #  branches:
+  #  - main
+  #  paths-ignore: 
+  #  - '**.md'
+  #  - '**/**.md'
 
 jobs:
   test:
