Add workflow_dispatch trigger to CI
Enable manual triggering of the CI workflow.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,8 @@
 name: Continuous Integration
 
 #workflow run trigger events
-#on: 
+on:
+  workflow_dispatch: 
   #push:
   #  branches:
   #  - main
