--- a/.github/workflows/ci3.yml
+++ b/.github/workflows/ci3.yml
@@ -18,8 +18,9 @@ jobs:
           # Hint: read more about the github context here: https://docs.github.com/en/actions/learn-github-actions/contexts#github-context
           # Hint: read more about setting job level environment variables here: https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idenv
           env:
-            MAXIMUM_ATTEMPTS: ${{ vars.MAXIMUM_ATTEMTS}}
+            MAXIMUM_ATTEMPTS: ${{ vars.MAXIMUM_ATTEMPTS}}
             RUN_ATTEMPT_NUMBER: ${{github.run_attempt}}
+            
         - name: Run job
           run: |
             echo "Running job"
