Update CI workflow to exclude main branch
Commented out the main branch in CI workflow.

--- a/.github/workflows/ci4.yml
+++ b/.github/workflows/ci4.yml
@@ -3,7 +3,7 @@ name: "Lesson 2 - Exercise 4"
 on:
   push:
     branches:
-      - main
+      #- main
       # Match the release branches: releases/1, releases/2, etc.
       - "releases/[0-9]"
 
