Comment out actor input description in workflow
Comment out the description field for the actor input.

--- a/.github/workflows/Reusable_Workflow.yml
+++ b/.github/workflows/Reusable_Workflow.yml
@@ -4,8 +4,9 @@ on:
   workflow_call:
     inputs:
       actor:
-        description: "The person who will receive the greeting"
-          required: true
+        #description: "The person who will receive the greeting"
+        required: true
+        type: string
         
 
 jobs:
